[package]
name = "bdk-sled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "82f9cad" }
sled = "0.34"
bincode = "1.3"
serde = "1"
tokio = { version = "1.27", features = ["macros", "rt"] }
